# vmix-rs

./: CLAUDE.md  Cargo.toml  README.md
.claude/: settings.local.json
.github/workflows/: ci.yml  claude.yml
.serena/: project.yml
.serena/cache/rust/: document_symbols_cache_v23-06-25.pkl
.serena/memories/: code_style_conventions.md  codebase_structure.md  project_overview.md  shutdown_fixes_summary.md  suggested_commands.md  task_completion_checklist.md  tech_stack.md  vmix_api_analysis.md
examples/: cli.rs  http_example.rs  tcp_http_comparison.rs  test_real_xml.rs
src/: acts.rs  commands.rs  http.rs  lib.rs  models.rs  traits.rs  vmix.rs
tests/: image_parsing_test.rs  multithread_tests.rs
vmix-core/: Cargo.toml  README.md
vmix-core/src/: lib.rs  models.rs
vmix-http/: Cargo.toml  README.md
vmix-http/src/: client.rs  lib.rs  traits.rs
vmix-rs/: Cargo.toml  README.md
vmix-rs/src/: lib.rs
vmix-tcp/: Cargo.toml  README.md
vmix-tcp/src/: acts.rs  commands.rs  lib.rs  traits.rs  vmix.rs
