[workspace]
members = [
    "vmix-core",
    "vmix-tcp",
    "vmix-http",
    "vmix-rs",
]
resolver = "2"

[workspace.package]
version = "0.2.1"
edition = "2021"
authors = ["Shugo Kawamura <ruk1ium@gmail.com>"]
repository = "https://github.com/FlowingSPDG/vmix-rs"
license = "MIT"

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0.152", default-features = false }
quick-xml = { version = "0.34", default-features = false }
anyhow = "1.0.69"

# TCP dependencies
# (none, uses std only)

# HTTP dependencies
tokio = { version = "1.25.0", default-features = false }
reqwest = { version = "0.11", default-features = false }
async-trait = "0.1"

# Other
urlencoding = "2.1.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
