[workspace]
members = [
    "vmix-core",
    "vmix-tcp",
    "vmix-http",
    "vmix-rs",
]
resolver = "2"

[workspace.package]
version = "0.2.2"
edition = "2024"
authors = ["Shugo Kawamura <ruk1ium@gmail.com>"]
repository = "https://github.com/FlowingSPDG/vmix-rs"
license = "MIT"

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0.152", default-features = false }
quick-xml = { version = "0.34", default-features = false }
anyhow = "1.0.69"

# TCP dependencies
# (none, uses std only)

# HTTP dependencies
tokio = { version = "1.25.0", default-features = false }
shiguredo_http11 = { version = "2026.1.0-canary.3", git = "https://github.com/shiguredo/http11-rs", branch = "develop" }
async-trait = "0.1"

# Other
urlencoding = "2.1.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
