[package]
name = "vmix-rs"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description = "vMix HTTP/TCP API Library"
readme = "README.md"

[dependencies]
vmix-core = { path = "../vmix-core", version = "0.2.1", features = ["xml"] }
vmix-tcp = { path = "../vmix-tcp", version = "0.2.1", optional = true }
vmix-http = { path = "../vmix-http", version = "0.2.1", optional = true }

[features]
default = ["tcp", "std"]
tcp = ["dep:vmix-tcp"]
http = ["dep:vmix-http"]
full = ["tcp", "http"]
std = ["vmix-core/std"]

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "net", "sync", "macros", "rt-multi-thread", "io-util", "io-std", "time", "signal"] }
reqwest = { workspace = true, features = ["json"] }
anyhow.workspace = true
quick-xml = { workspace = true, features = ["serialize"] }

[lib]
name = "vmix_rs"
path = "src/lib.rs"

# Examples that use HTTP API
[[example]]
name = "tcp_http_comparison"
path = "../examples/tcp_http_comparison.rs"
required-features = ["full"]

[[example]]
name = "http_example"
path = "../examples/http_example.rs"
required-features = ["http"]

[[example]]
name = "cli"
path = "../examples/cli.rs"
required-features = ["tcp"]

[[example]]
name = "test_real_xml"
path = "../examples/test_real_xml.rs"

# Integration tests
[[test]]
name = "image_parsing_test"
path = "../tests/image_parsing_test.rs"

[[test]]
name = "multithread_tests"
path = "../tests/multithread_tests.rs"
