[package]
name = "vmix-tcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description = "TCP API client for vMix"
readme = "README.md"

[dependencies]
vmix-core = { path = "../vmix-core", version = "0.2.2", features = ["std", "xml"] }
anyhow.workspace = true

[lib]
name = "vmix_tcp"
path = "src/lib.rs"
